--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@drawable/main_backdrop"
+    android:layout_height="match_parent">
 
-    <!-- Empty View to Push Buttons to Center -->
-
-    <!-- Button for Breakfast -->
-
-    <!-- Button for Lunch -->
+    <!-- Header -->
     <TextView
         android:id="@+id/greetingID"
-        android:layout_width="304dp"
-        android:layout_height="79dp"
-        android:text="TextView"
-        android:textSize="32sp" />
-
-    <Button
-        android:id="@+id/breakfast_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:text="@string/breakfast" />
-
-    <Button
-        android:id="@+id/lunch_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lunch"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Button for Dinner -->
-    <Button
-        android:id="@+id/dinner_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dinner"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Empty View to Push Buttons to Center -->
-    <View
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"/>
+        android:layout_height="wrap_content"
+        android:text="@string/meal_planner"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="15dp"
+        />
 
-    <!-- Logout Button (Bottom Right) -->
+    <!-- CardViews with Buttons -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/greetingID"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <!-- CardView for Breakfast -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="20dp"
+            app:cardBackgroundColor="@android:color/transparent">
+
+            <Button
+                android:id="@+id/breakfast_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/breakfast"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:background="@color/white"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for Lunch -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="20dp"
+            app:cardBackgroundColor="@android:color/transparent">
+
+            <Button
+                android:id="@+id/lunch_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:text="@string/lunch"
+                android:textSize="18sp"
+                android:background="@color/blue"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for Dinner -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="20dp"
+            app:cardBackgroundColor="@android:color/transparent">
+
+            <Button
+                android:id="@+id/dinner_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:text="@string/dinner"
+                android:textSize="18sp"
+                android:background="@color/blue"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for Explore -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:cardBackgroundColor="@android:color/transparent">
+
+            <Button
+                android:id="@+id/explore_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:text="@string/explore"
+                android:textSize="18sp"
+                android:background="@color/blue"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
+    <!-- Bottom Header for Logout Button -->
     <Button
         android:id="@+id/logout_button"
-        android:layout_width="107dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"
-        android:text="@string/logout" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="30dp"
+        android:background="@color/blue"
+        android:text="@string/logout"
+        android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="155dp"
-        android:layout_height="wrap_content"
-        android:text="Button" />
 
-</LinearLayout>
+</RelativeLayout>
