added api folder

--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cyan"
-    tools:context=".RecipeDetailsActivity">
+    tools:context=".API.RecipeDetailsActivity">
 
     <androidx.appcompat.widget.Toolbar
         app:title="Dish Details"
