--- a/app/src/main/res/layout/activity_breakfast_favorite.xml
+++ b/app/src/main/res/layout/activity_breakfast_favorite.xml
@@ -4,14 +4,40 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- Add EditText widget for user input -->
+    <!-- EditText for Meal Name -->
     <EditText
-        android:id="@+id/editTextFavorite"
+        android:id="@+id/editTextMealName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Bacon"
-        android:layout_marginBottom="16dp"
-        android:inputType="text"/>
+        android:hint="Meal Name"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- EditText for Ingredients -->
+    <EditText
+        android:id="@+id/editTextIngredients"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editTextMealName"
+        android:hint="Ingredients"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- EditText for Cooking Instructions -->
+    <EditText
+        android:id="@+id/editTextCookingInstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editTextIngredients"
+        android:hint="Cooking Instructions"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Button to save the meal -->
+    <Button
+        android:id="@+id/btnSaveMeal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editTextCookingInstructions"
+        android:layout_centerHorizontal="true"
+        android:text="Save Meal"/>
 
     <!-- Add your UI elements here -->
 
