--- a/app/src/main/res/layout/activity_lunch.xml
+++ b/app/src/main/res/layout/activity_lunch.xml
@@ -6,17 +6,17 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Generate"
-        android:layout_marginBottom="16dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Favorites"
+        android:text="Add your lunch"
         android:layout_below="@id/button1"
         android:layout_centerHorizontal="true"/>
 
