database user input

--- a/app/src/main/res/layout/activity_dinner.xml
+++ b/app/src/main/res/layout/activity_dinner.xml
@@ -4,39 +4,24 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- EditText for Meal Name -->
-    <EditText
-        android:id="@+id/editTextMealName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Meal Name"
-        android:layout_marginBottom="16dp"/>
-
-    <!-- EditText for Ingredients -->
-    <EditText
-        android:id="@+id/editTextIngredients"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextMealName"
-        android:hint="Ingredients"
-        android:layout_marginBottom="16dp"/>
-
-    <!-- EditText for Cooking Instructions -->
-    <EditText
-        android:id="@+id/editTextCookingInstructions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextIngredients"
-        android:hint="Cooking Instructions"
-        android:layout_marginBottom="16dp"/>
+    <!-- Button to generate dinner -->
     <Button
-        android:id="@+id/btnSaveMeal"
+        android:id="@+id/buttonGenerateDinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextCookingInstructions"
+        android:text="Generate"
+        android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
-        android:text="Save Meal"/>
+        android:layout_centerVertical="true"/>
 
-    <!-- Add your UI elements here -->
+    <!-- Button to add favorite dinner -->
+    <Button
+        android:id="@+id/buttonAddFavoriteDinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add your dinner"
+        android:layout_below="@id/buttonGenerateDinner"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
