--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:layout_height="match_parent"
     android:background="@drawable/foodbackground"
-    tools:context=".Login">
+    tools:context=".Auth.Login">
 
 
     <TextView
