--- a/app/src/main/res/layout/activity_breakfast.xml
+++ b/app/src/main/res/layout/activity_breakfast.xml
@@ -3,33 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_backdrop"
-    android:padding="45dp">
+    android:padding="45dp"
+    android:gravity="center">
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linear1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="16dp"
-        android:text="@string/generate_random_dishes" />
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="16dp">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="@string/generate_random_dishes" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_own_meal"
-        android:layout_below="@id/button1"
-        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:layout_below="@id/linear1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp">
 
-        android:layout_marginBottom="16dp"/>
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="@string/favorite_random_dishes" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linear3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/favorite_random_dishes"
-        android:layout_below="@id/button2"
-        android:layout_centerInParent="true"
-       />
+        android:orientation="vertical"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="@string/add_own_meal" />
+
+    </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
