--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:padding="15dp"
     android:gravity="center"
     android:layout_height="match_parent"
-    android:background="@drawable/foodbackground"
+    android:background="@drawable/main_backdrop"
     tools:context=".Auth.Login">
 
 
