--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/foodbackground"
+    android:background="@drawable/main_backdrop"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="15dp"
