--- a/app/src/main/res/layout/activity_dinner.xml
+++ b/app/src/main/res/layout/activity_dinner.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <!-- ListView to display dinner recipes -->
+    <ListView
+        android:id="@+id/listViewRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/buttonViewData"
+        android:layout_below="@id/buttonGenerateDinner"
+        android:layout_marginTop="16dp"/>
+
     <!-- Button to generate dinner -->
     <Button
         android:id="@+id/buttonGenerateDinner"
@@ -23,5 +32,15 @@
         android:layout_below="@id/buttonGenerateDinner"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
+
+    <!-- Button to view dinner data -->
+    <Button
+        android:id="@+id/buttonViewData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Data"
+        android:layout_below="@id/buttonAddFavoriteDinner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
