--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,14 @@
                 android:gravity="center"/>
 
         </androidx.cardview.widget.CardView>
+        <Button
+            android:id="@+id/profile_button"
+            android:layout_width="365dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Profile" />
+
+
 
 
 
