--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -12,7 +12,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
         <LinearLayout
             android:orientation="vertical"
             android:gravity="center"
@@ -76,6 +77,25 @@
                 android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
+
+            <Button
+                android:id="@+id/button_next_recipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Next Recipe"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center" />
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/sides_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:clipToPadding="false"
+                android:background="@android:color/white" />
+
 
 
 
