--- a/app/src/main/res/layout/activity_breakfast_generate.xml
+++ b/app/src/main/res/layout/activity_breakfast_generate.xml
@@ -76,11 +76,11 @@
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_random"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="5dp" />
+    android:id="@+id/recycler_random"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="24dp"
+    android:padding="16dp"
+    android:clipToPadding="false" />
 
 </LinearLayout>
