--- a/app/src/main/res/layout/activity_lunch.xml
+++ b/app/src/main/res/layout/activity_lunch.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/lunch_background"
     android:padding="16dp">
 
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Generate"
+        android:text="Generate Random Lunch Meals"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
 
@@ -16,8 +17,15 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add your lunch"
         android:layout_below="@id/button1"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginTop="4dp"
+        android:text="Add Own Meal" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button1"
+        android:layout_marginTop="54dp"
+        android:text="View Your Liked Dishes" />
 </RelativeLayout>
