added lunch files path to the manifest folder

--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -90,7 +90,7 @@
                 android:id="@+id/textView_next_recipe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/side_dish"
+                android:text="side_dish"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
