--- a/app/src/main/res/layout/activity_lunch.xml
+++ b/app/src/main/res/layout/activity_lunch.xml
@@ -9,7 +9,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Generate Random Lunch Meals"
+        android:text="@string/generate_random_lunch_meals"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
 
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button1"
         android:layout_marginTop="4dp"
-        android:text="Add Own Meal" />
+        android:text="@string/add_ownMeal" />
 
     <Button
         android:id="@+id/button3"
@@ -27,5 +27,5 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button1"
         android:layout_marginTop="54dp"
-        android:text="View Your Liked Dishes" />
+        android:text="@string/view_your_liked_dishes" />
 </RelativeLayout>
