--- a/app/src/main/res/layout/activity_dinner.xml
+++ b/app/src/main/res/layout/activity_dinner.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:background="@drawable/main_backdrop"
+    android:padding="45dp"
+    android:gravity="center">
 
     <!-- ListView to display dinner recipes -->
     <ListView
@@ -10,37 +12,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/buttonViewData"
-        android:layout_below="@id/buttonGenerateDinner"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/buttonGenerateDinner" />
 
     <!-- Button to generate dinner -->
     <Button
         android:id="@+id/buttonGenerateDinner"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Generate"
-        android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="16dp"
+        android:text="Generate" />
 
     <!-- Button to add favorite dinner -->
     <Button
         android:id="@+id/buttonAddFavoriteDinner"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add your dinner"
         android:layout_below="@id/buttonGenerateDinner"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_alignStart="@id/buttonGenerateDinner"
+        android:layout_alignEnd="@id/buttonGenerateDinner"
+        android:layout_marginTop="16dp"
+        android:text="Add your dinner" />
+
+    <!-- Button for favorite random dinner dishes -->
+    <Button
+        android:id="@+id/buttonFavoriteRandomDinnerDishes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonAddFavoriteDinner"
+        android:layout_alignStart="@id/buttonGenerateDinner"
+        android:layout_alignEnd="@id/buttonGenerateDinner"
+        android:layout_marginTop="16dp"
+        android:text="Favorite Random Dishes" />
 
     <!-- Button to view dinner data -->
     <Button
         android:id="@+id/buttonViewData"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View Data"
-        android:layout_below="@id/buttonAddFavoriteDinner"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_below="@id/buttonFavoriteRandomDinnerDishes"
+        android:layout_alignStart="@id/buttonGenerateDinner"
+        android:layout_alignEnd="@id/buttonGenerateDinner"
+        android:layout_marginTop="16dp"
+        android:text="View Data" />
 
 </RelativeLayout>
