--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cyan"
-    tools:context=".API.RecipeDetailsActivity">
+    tools:context="com.mealproject.mealplanner17.API.RecipeDetailsActivity">
 
 
 
