--- a/app/src/main/res/layout/activity_dinner_generate.xml
+++ b/app/src/main/res/layout/activity_dinner_generate.xml
@@ -22,6 +22,20 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"/>
 
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="25dp">
+
+        </TextView>
+
+        <Button
+            android:id="@+id/historyButton"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/history">
+
+        </Button>
+
     </LinearLayout>
 
     <!-- Food Intolerance Spinner -->
