add history button to lunch/dinner

--- a/app/src/main/res/layout/activity_lunch_generate.xml
+++ b/app/src/main/res/layout/activity_lunch_generate.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/orange"
-    android:padding="16dp"
-    tools:context=".BrowseMeals">
+    android:padding="16dp">
 
     <!-- Header Container -->
     <LinearLayout
